// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should have props passed to it 1`] = `
<div
  className="container"
>
  <div>
    name: 
    Ridiculously Overpriced Chateau
  </div>
  <div>
    baths: 
    3
  </div>
  <div>
    beds: 
    2
  </div>
  <div>
    ownerName: 
    John Smith
  </div>
  <div>
    location: 
    Brooklyn
  </div>
  <div>
    livingSpace: 
    Condo
  </div>
</div>
`;

exports[`<Header /> should render Header properly 1`] = `
<div
  className="container"
>
  <div>
    name: 
    Cozy thing
  </div>
  <div>
    baths: 
    0
  </div>
  <div>
    beds: 
    0
  </div>
  <div>
    ownerName: 
    Charlie P
  </div>
  <div>
    location: 
    San Francisco
  </div>
  <div>
    livingSpace: 
    Apartment
  </div>
</div>
`;
